resume dan responsive

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 Saya siap menghadapi tantangan baru dan berkomitmen untuk memberikan kontribusi maksimal dalam peran sebagai seorang Web Developer, dengan pengetahuan yang komprehensif termasuk penggunaan WordPress untuk memenuhi kebutuhan
                 pengembangan web yang beragam.
               </p>
-              <a href="#" class="cta">Download My Resume</a>
+              <a href="https://drive.google.com/drive/folders/1znSHI3HtF5o0raFt559jSN_IaxjlXyxy?usp=sharing" class="cta" target="_blank">Download My Resume</a>
             </div>
           </div>
         </article>
